uploaded handwritten lecture notes

--- a/myst.yml
+++ b/myst.yml
@@ -21,6 +21,7 @@ project:
   # bibliography: []
   exclude:
     'linear_algebraic_systems/'
+    'lecture_notes/'
 site:
   template: book-theme
   title: ESE 2030 📏
