uploaded various case studies

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ jupyter-book
 matplotlib
 numpy
 jupyterlab-myst
-scipy
+scipy==1.10.1
 scikit-learn
 tensorflow
 tensorflow_datasets
 pandas
+torch
+torchvision
