Upload Chapter 9 case study

--- a/myst.yml
+++ b/myst.yml
@@ -24,6 +24,7 @@ project:
   # bibliography: []
   exclude:
     'linear_algebraic_systems/'
+    'old/*.ipynb'
   numbering:
     heading_1: true
     heading_2: true
