--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,6 @@ seaborn
 tfds-nightly
 tensorflow_datasets
 tqdm
+-f https://download.pytorch.org/whl/torch_stable.html
+torch==1.8.1+cpu 
+torchvision==0.9.1+cpu
