--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,5 @@ tfds-nightly
 tensorflow_datasets
 tqdm
 -f https://download.pytorch.org/whl/torch_stable.html
-torch==1.8.1+cpu 
-torchvision==0.9.1+cpu
+torch==2.3.0+cpu
+torchvision=0.18.1+cpu
