--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ pandas
 gensim
 seaborn
 tfds-nightly
-tensorflow_datasets
+tensorflow-ranking
 tqdm
 -f https://download.pytorch.org/whl/torch_stable.html
 torch==2.3.1+cpu
